correct version of nsfc data

--- a/NSFC_data.ipynb
+++ b/NSFC_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,8 @@
     "from wordcloud import WordCloud\n",
     "from pypinyin import pinyin, lazy_pinyin, Style\n",
     "from keras.regularizers import l2\n",
+    "import os\n",
+    "\n",
     "\n",
     "plt.rcParams['figure.dpi'] = 1200\n",
     "plt.rcParams['savefig.dpi'] = 1200\n",
@@ -43,14 +45,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project_dir = \"/Users/yansong/Library/CloudStorage/Dropbox/nutstore_files/基金研究/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nsfc_data(year):\n",
     "    \n",
-    "    path = \"/Users/yansong/Nutstore_Files/基金研究/data/2013--2022面青/\"\n",
-    "    file_name = path+year+\".xlsx\"\n",
+    "    sub_dir = \"data/2013_2022面青/\"    \n",
+    "    file_name = project_dir+sub_dir+year+\".xlsx\"\n",
+    "    \n",
     "    apps = pd.read_excel(file_name,sheet_name = \"申请\")\n",
     "    if year in [\"2013\",\"2014\",\"2015\",\"2017\",\"2018\",\"2019\",\"2020\",\"2021\"]:\n",
     "        apps.drop(columns=['Unnamed: 0','Unnamed: 5', 'Unnamed: 6','Unnamed: 7', 'Unnamed: 8','项目名称2','姓名','申请单位'],inplace=True)\n",
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +195,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +226,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +257,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +342,7 @@
        "0  3> 多环芳烃（PAHs）在大气、水体、土壤等环境介质中广泛存在，具有致癌、致畸、致突变等特...  None  None   0  2013  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +497,7 @@
        "0  [Ding, Lei]  "
       ]
      },
-     "execution_count": 150,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,22 +508,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(applicants_py).to_csv(\"/Users/yansong/Nutstore_Files/基金研究/data/2013--2022面青/applicants_py.csv\",\n",
-    "                             encoding='utf_8_sig')"
+    "sub_dir = \"data/2013_2022面青/applicants_py.csv\"\n",
+    "file_name = project_dir+sub_dir\n",
+    "pd.DataFrame(applicants_py).to_csv(file_name,encoding='utf_8_sig')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(qn_all).to_csv(\"/Users/yansong/Nutstore_Files/基金研究/data/2013--2022面青/qn_all.csv\",\n",
-    "                             encoding='utf_8_sig')"
+    "sub_dir = \"data/2013_2022面青/qn_all.csv\"\n",
+    "file_name = project_dir+sub_dir\n",
+    "pd.DataFrame(qn_all).to_csv(file_name,encoding='utf_8_sig')"
    ]
   },
   {
@@ -523,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +664,7 @@
        "1  5>具体评价意见：\\n一、该申请项目的研究内容是否具有原创性并值得鼓励尝试？请针对创新点（如...   0  2022  "
       ]
      },
-     "execution_count": 154,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,15 +675,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(ms_all).to_csv(\"/Users/yansong/Nutstore_Files/基金研究/data/2013--2022面青/ms_all.csv\",\n",
-    "                             encoding='utf_8_sig')\n",
+    "sub_dir = \"data/2013_2022面青/ms_all.csv\"\n",
+    "file_name = project_dir+sub_dir\n",
+    "pd.DataFrame(ms_all).to_csv(file_name,encoding='utf_8_sig')\n",
     "\n",
-    "pd.DataFrame(applicants_py).to_csv(\"/Users/yansong/Nutstore_Files/基金研究/data/2013--2022面青/ms_applicants_py.csv\",\n",
-    "                             encoding='utf_8_sig')"
+    "sub_dir = \"data/2013_2022面青/ms_applicants_py.csv\"\n",
+    "file_name = project_dir+sub_dir\n",
+    "pd.DataFrame(applicants_py).to_csv(file_name,encoding='utf_8_sig')"
    ]
   },
   {
@@ -688,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +901,7 @@
        "217  [Bagrat Mailyan]   理工  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,6 +941,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我 爱 自然语言 处理\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"我爱自然语言处理\"\n",
+    "tokens = jieba.cut(text)\n",
+    "print(\" \".join(tokens))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -933,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1050,7 @@
        "4   4       负  1>具体评价意见：\\n一、该申请项目的研究思想或方案是否具有新颖性和独特性？请详细阐述判断理..."
       ]
      },
-     "execution_count": 164,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1133,9 @@
     "        line = re.sub(x, \"\", line)\n",
     "    \n",
     "    # stopwords\n",
-    "    stopwords=pd.read_csv('stopwords.txt', header=None)[0].tolist() \n",
+    "    sub_dir = \"data/stopwords.txt\"\n",
+    "    file_name = project_dir+sub_dir\n",
+    "    stopwords=pd.read_csv(file_name, header=None)[0].tolist() \n",
     "    for x in stopwords:\n",
     "        line = re.sub(x, \"\", line)\n",
     "    return line"
@@ -1106,14 +1143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
+   "execution_count": 70,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/kp/gk4kvr5s0plbp5y3112cx_x00000gn/T/ipykernel_90122/237222752.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/kp/gk4kvr5s0plbp5y3112cx_x00000gn/T/ipykernel_19761/237222752.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1128,60 +1167,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1>具体评价意见：\\n一、该申请项目的研究思想或方案是否具有新颖性和独特性？请详细阐述判断理由。\\n申请人所从事的方向为解析数论，拟模仿Feigon与Whitehouse在2009年的开创性工作，借助相对迹公式将上述二人所得到的均值公式推广到全实域上的Hilbert尖形式上，进而给出对应L-函数中心值的非零性，随后用类似方法研究二次扩域上的Asai L-函数以及一类更高阶的L-函数的均值公式。该研究计划有一定的科学研究价值，颇有难度，但其研究思想在新颖性与独特性稍显不足，整个申请书给人感觉申请人只是在照搬别人方法而缺乏自己的独特思想。事实上，申请人拟采用Feigon与Whitehouse在2009年提出的方法来解决更为困难的问题，显然需要有更为高级的技巧与工具，但申请人在这方面的阐述缺乏说服力。\\n\\n二、请评述申请项目所关注问题的科学价值以及对相关前沿领域的潜在贡献。\\n该申请项目所关注的问题有一定科学价值。若该研究计划能够顺利完成，对相关领域会有一定帮助。\\n\\n三、请评述申请人的创新潜力与研究方案的可行性。\\n申请人于2020年获得博士学位，目前尚未有论文发表，但有两篇论文投稿。从现有工作无法看出申请人的创新潜力。正如前面指出的，申请人拟采用Feigon与Whitehouse在2009年提出的方法来解决更为困难的问题，显然需要有更为高级的技巧与工具，但申请人在这方面的阐述缺乏说服力，从而极大影响了对其研究方案的可行性的判断。\\n\\n四、其他建议\\n1. 申请青年基金不需要有大量的工作积累，但还是需要若干有份量的工作。建议申请人等其代表作发表后再申请青年基金，这样会更有说服力，也能极大提高申请成功率。\\n2. 申请人由于刚毕业缺乏写作经验，建议向有经验的前辈请教以便提高申请书的可读性与说服力，进而提高申请成功率。\\n3. 申请书第19页倒数第2行应为“晨兴数学中心”\\n\\n\\n'"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_json_sample[\"content_clean\"][0]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 使用jieba进行分词"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 > 具体 评价 意见 ： \n",
-      " 一 、 该 申请 项目 的 研究 思想 或 方案 是否 具有 新颖性 和 独特性 ？ 请 详细 阐述 判断 理由 。 \n",
-      " 申请人 所 从事 的 方向 为 解析数论 ， 拟 模仿 Feigon 与 Whitehouse 在 2009 年 的 开创性 工作 ， 借助 相对 迹 公式 将 上述 二人 所 得到 的 均值 公式 推广 到 全实域 上 的 Hilbert 尖 形式 上 ， 进而 给出 对应 L - 函数 中心 值 的 非零性 ， 随后 用 类似 方法 研究 二次 扩域 上 的 Asai   L - 函数 以及 一类 更 高阶 的 L - 函数 的 均值 公式 。 该 研究 计划 有 一定 的 科学研究 价值 ， 颇 有 难度 ， 但 其 研究 思想 在 新颖性 与 独特性 稍显 不足 ， 整个 申请书 给 人 感觉 申请人 只是 在 照搬 别人 方法 而 缺乏 自己 的 独特 思想 。 事实上 ， 申请人 拟 采用 Feigon 与 Whitehouse 在 2009 年 提出 的 方法 来 解决 更为 困难 的 问题 ， 显然 需要 有 更为 高级 的 技巧 与 工具 ， 但 申请人 在 这方面 的 阐述 缺乏 说服力 。 \n",
-      " \n",
-      " 二 、 请 评述 申请 项目 所 关注 问题 的 科学 价值 以及 对 相关 前沿 领域 的 潜在 贡献 。 \n",
-      " 该 申请 项目 所 关注 的 问题 有 一定 科学 价值 。 若该 研究 计划 能够 顺利完成 ， 对 相关 领域 会 有 一定 帮助 。 \n",
-      " \n",
-      " 三 、 请 评述 申请人 的 创新 潜力 与 研究 方案 的 可行性 。 \n",
-      " 申请人 于 2020 年 获得 博士学位 ， 目前 尚未 有 论文 发表 ， 但 有 两篇 论文 投稿 。 从 现有 工作 无法 看出 申请人 的 创新 潜力 。 正如 前面 指出 的 ， 申请人 拟 采用 Feigon 与 Whitehouse 在 2009 年 提出 的 方法 来 解决 更为 困难 的 问题 ， 显然 需要 有 更为 高级 的 技巧 与 工具 ， 但 申请人 在 这方面 的 阐述 缺乏 说服力 ， 从而 极大 影响 了 对 其 研究 方案 的 可行性 的 判断 。 \n",
-      " \n",
-      " 四 、 其他 建议 \n",
-      " 1 .   申请 青年 基金 不 需要 有 大量 的 工作 积累 ， 但 还是 需要 若干 有 份量 的 工作 。 建议 申请人 等 其 代表作 发表 后 再 申请 青年 基金 ， 这样 会 更 有 说服力 ， 也 能 极大 提高 申请 成功率 。 \n",
-      " 2 .   申请人 由于 刚 毕业 缺乏 写作 经验 ， 建议 向 有 经验 的 前辈 请教 以便 提高 申请书 的 可读性 与 说服力 ， 进而 提高 申请 成功率 。 \n",
-      " 3 .   申请书 第 19 页 倒数第 2 行 应为 “ 晨兴 数学 中心 ” \n",
-      " \n",
-      " \n",
-      "\n"
+      "事方 解析 数 模仿 FeigonWhitehouse2009 年 开创性 工作 借助 相迹 公式 二人 均值 公式 推广 全实域 上 Hilbert 尖 形式 上 进出 应 L - 函数 中心 值非 零性 后 类似 方法 二次 扩域 上 Asai   L - 函数 类 更 高阶 L - 函数 均值 公式 计划 定 科学 价值 颇 难度 思想 新颖性 独特性 稍 显整 申请书 人 感觉 搬人 方法 缺乏 独特 思想 事实上 采 FeigonWhitehouse2009 年 提出 方法 解决 更 困难 需 更 高级 技巧 工具 阐述 缺乏 说服力 申请 项目 关注 定 科学 价值 计划 够利 相关 领域 会定 2020 年 获 博士学位 尚未 文 发表 两篇 文 投稿 现 工作 创新 潜力 正 指出 采 FeigonWhitehouse2009 年 提出 方法 解决 更 困难 需 更 高级 技巧 工具 阐述 缺乏 说服力 极大 影响 方案 行性 判断 1 .   申请 青年 基金 不需 工作 积累 还 需干 份量 工作 建议 代表作 发表 后 再 申请 青年 基金 样会 更 说服力 极大 提高 申请 成功率 2 .   刚 毕业 缺乏 写作 验 建议 验 前辈 请教 便 提高 申请书 读性 说服力 进 提高 申请 成功率 3 .   申请书 19 页 倒数 2 行应 “ 晨兴 数学 中心 ”\n"
      ]
     }
    ],
    "source": [
-    "# 使用jieba进行分词\n",
     "seg_lists = list()\n",
+    "sentences = []\n",
+    "\n",
     "lines = list(df_json_sample['content_clean'])\n",
     "for line in lines:\n",
     "    seg_lists.append(jieba.cut(line))\n",
-    "sentences = []\n",
     "for i in seg_lists:      \n",
     "    sentences.append(' '.join(i))    \n",
     "print(sentences[0])"
@@ -1189,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,16 +1258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1 > 具体 评价 意见 ： \\n 一 、 该 申请 项目 的 研究 思想 或 方案 是否 具有 新颖性 和 独特性 ？ 请 详细 阐述 判断 理由 。 \\n 申请人 所 从事 的 方向 为 解析数论 ， 拟 模仿 Feigon 与 Whitehouse 在 2009 年 的 开创性 工作 ， 借助 相对 迹 公式 将 上述 二人 所 得到 的 均值 公式 推广 到 全实域 上 的 Hilbert 尖 形式 上 ， 进而 给出 对应 L - 函数 中心 值 的 非零性 ， 随后 用 类似 方法 研究 二次 扩域 上 的 Asai   L - 函数 以及 一类 更 高阶 的 L - 函数 的 均值 公式 。 该 研究 计划 有 一定 的 科学研究 价值 ， 颇 有 难度 ， 但 其 研究 思想 在 新颖性 与 独特性 稍显 不足 ， 整个 申请书 给 人 感觉 申请人 只是 在 照搬 别人 方法 而 缺乏 自己 的 独特 思想 。 事实上 ， 申请人 拟 采用 Feigon 与 Whitehouse 在 2009 年 提出 的 方法 来 解决 更为 困难 的 问题 ， 显然 需要 有 更为 高级 的 技巧 与 工具 ， 但 申请人 在 这方面 的 阐述 缺乏 说服力 。 \\n \\n 二 、 请 评述 申请 项目 所 关注 问题 的 科学 价值 以及 对 相关 前沿 领域 的 潜在 贡献 。 \\n 该 申请 项目 所 关注 的 问题 有 一定 科学 价值 。 若该 研究 计划 能够 顺利完成 ， 对 相关 领域 会 有 一定 帮助 。 \\n \\n 三 、 请 评述 申请人 的 创新 潜力 与 研究 方案 的 可行性 。 \\n 申请人 于 2020 年 获得 博士学位 ， 目前 尚未 有 论文 发表 ， 但 有 两篇 论文 投稿 。 从 现有 工作 无法 看出 申请人 的 创新 潜力 。 正如 前面 指出 的 ， 申请人 拟 采用 Feigon 与 Whitehouse 在 2009 年 提出 的 方法 来 解决 更为 困难 的 问题 ， 显然 需要 有 更为 高级 的 技巧 与 工具 ， 但 申请人 在 这方面 的 阐述 缺乏 说服力 ， 从而 极大 影响 了 对 其 研究 方案 的 可行性 的 判断 。 \\n \\n 四 、 其他 建议 \\n 1 .   申请 青年 基金 不 需要 有 大量 的 工作 积累 ， 但 还是 需要 若干 有 份量 的 工作 。 建议 申请人 等 其 代表作 发表 后 再 申请 青年 基金 ， 这样 会 更 有 说服力 ， 也 能 极大 提高 申请 成功率 。 \\n 2 .   申请人 由于 刚 毕业 缺乏 写作 经验 ， 建议 向 有 经验 的 前辈 请教 以便 提高 申请书 的 可读性 与 说服力 ， 进而 提高 申请 成功率 。 \\n 3 .   申请书 第 19 页 倒数第 2 行 应为 “ 晨兴 数学 中心 ” \\n \\n \\n'"
+       "'事方 解析 数 模仿 FeigonWhitehouse2009 年 开创性 工作 借助 相迹 公式 二人 均值 公式 推广 全实域 上 Hilbert 尖 形式 上 进出 应 L - 函数 中心 值非 零性 后 类似 方法 二次 扩域 上 Asai   L - 函数 类 更 高阶 L - 函数 均值 公式 计划 定 科学 价值 颇 难度 思想 新颖性 独特性 稍 显整 申请书 人 感觉 搬人 方法 缺乏 独特 思想 事实上 采 FeigonWhitehouse2009 年 提出 方法 解决 更 困难 需 更 高级 技巧 工具 阐述 缺乏 说服力 申请 项目 关注 定 科学 价值 计划 够利 相关 领域 会定 2020 年 获 博士学位 尚未 文 发表 两篇 文 投稿 现 工作 创新 潜力 正 指出 采 FeigonWhitehouse2009 年 提出 方法 解决 更 困难 需 更 高级 技巧 工具 阐述 缺乏 说服力 极大 影响 方案 行性 判断 1 .   申请 青年 基金 不需 工作 积累 还 需干 份量 工作 建议 代表作 发表 后 再 申请 青年 基金 样会 更 说服力 极大 提高 申请 成功率 2 .   刚 毕业 缺乏 写作 验 建议 验 前辈 请教 便 提高 申请书 读性 说服力 进 提高 申请 成功率 3 .   申请书 19 页 倒数 2 行应 “ 晨兴 数学 中心 ”'"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1287,7 @@
        "32382"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
