streamline patent codes

--- a/scopus.ipynb
+++ b/scopus.ipynb
@@ -2,12 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pybliometrics\n",
@@ -28,12 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "key = 'e481df310424e8968a8c8f8847ffba88'\n",
@@ -50,14 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# https://api.elsevier.com/content/search/affiliation?query=affil(Shandong%20University)\n",
@@ -67,14 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# pybliometrics.scopus.utils.startup.config.set('Authentication', 'APIKey',key)"
@@ -82,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -95,7 +75,7 @@
        "'e481df310424e8968a8c8f8847ffba88'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -119,7 +99,7 @@
        "'a202cd353b981c0170d11aaae3449980'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,12 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -245,7 +221,7 @@
        "4   China      0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,28 +242,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "applicants_py= pd.read_csv(\"/Users/yansong/Nutstore Files/基金研究/data/2013--2022面青/applicants_py.csv\",\n",
-    "                             encoding='utf_8_sig')\n",
-    "applicants_py.drop(columns = 'Unnamed: 0',inplace=True)\n",
-    "applicants_py.rename(columns={\"0\": \"LastName\",\"1\": \"FirstName\"},inplace=True)"
+    "# mac \n",
+    "#project_dir = \"/Users/yansong/Library/CloudStorage/Dropbox/nutstore_files/基金研究/\"\n",
+    "\n",
+    "#imac \n",
+    "project_dir = \"/Users/yansong/Dropbox/nutstore_files/基金研究/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -340,87 +309,53 @@
        "      <td>He</td>\n",
        "      <td>Bo</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1838</th>\n",
-       "      <td>Huang</td>\n",
-       "      <td>Wei</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1839</th>\n",
-       "      <td>Huang</td>\n",
-       "      <td>Zhenxing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1840</th>\n",
-       "      <td>Huang</td>\n",
-       "      <td>Liubin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1841</th>\n",
-       "      <td>Huang</td>\n",
-       "      <td>Lulu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1842</th>\n",
-       "      <td>Long</td>\n",
-       "      <td>Teng</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1843 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     LastName FirstName\n",
-       "0        Ding       Lei\n",
-       "1          Yu       Mei\n",
-       "2          Qi   Xingqin\n",
-       "3       Zhong       Hui\n",
-       "4          He        Bo\n",
-       "...       ...       ...\n",
-       "1838    Huang       Wei\n",
-       "1839    Huang  Zhenxing\n",
-       "1840    Huang    Liubin\n",
-       "1841    Huang      Lulu\n",
-       "1842     Long      Teng\n",
-       "\n",
-       "[1843 rows x 2 columns]"
+       "  LastName FirstName\n",
+       "0     Ding       Lei\n",
+       "1       Yu       Mei\n",
+       "2       Qi   Xingqin\n",
+       "3    Zhong       Hui\n",
+       "4       He        Bo"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "applicants_py"
+    "subdir = \"/data/2013_2022面青/\"\n",
+    "applicants_file = project_dir+subdir+ \"applicants_py.csv\"\n",
+    "\n",
+    "applicants_py= pd.read_csv(applicants_file,encoding='utf_8_sig')\n",
+    "applicants_py.drop(columns = 'Unnamed: 0',inplace=True)\n",
+    "applicants_py.rename(columns={\"0\": \"LastName\",\"1\": \"FirstName\"},inplace=True)\n",
+    "applicants_py.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "subdir = \"/data/2013_2022面青/scopus/\"\n",
+    "path = project_dir+subdir\n",
+    "\n",
     "size = applicants_py.shape[0]\n",
     "counter = 0\n",
     "for i in range(0,size):\n",
     "    t1 = 'AF-ID(60031031) and AUTHLAST('\n",
-    "    last_name = applicants_py.loc[i,'LastName']\n",
+    "    last_name = str(applicants_py.loc[i,'LastName'])\n",
     "    t2 = ') and AUTHFIRST('\n",
-    "    first_name = applicants_py.loc[i,'FirstName']\n",
+    "    first_name = str(applicants_py.loc[i,'FirstName'])\n",
     "    t3 = ')'\n",
     "    query = t1+last_name+t2+first_name+t3\n",
-    "    path = \"/Users/yansong/Nutstore Files/基金研究/data/2013--2022面青/scopus/\"\n",
+    "    # path = \"/Users/yansong/Nutstore Files/基金研究/data/2013--2022面青/scopus/\"\n",
     "    file_name = path+last_name+first_name+\".csv\"\n",
     "    if os.path.isfile(file_name):\n",
     "        # display(\"checked\")\n",
@@ -431,7 +366,7 @@
     "        if s.shape[0]>0:\n",
     "            display(\"new\")\n",
     "            s_checked = s[s['givenname'] == first_name]\n",
-    "            path = \"/Users/yansong/Nutstore Files/基金研究/data/2013--2022面青/scopus/\"\n",
+    "            # path = \"/Users/yansong/Nutstore Files/基金研究/data/2013--2022面青/scopus/\"\n",
     "            file_name = path+last_name+first_name+\".csv\"\n",
     "            pd.DataFrame(s_checked).to_csv(file_name,encoding='utf_8_sig')"
    ]
@@ -439,16 +374,12 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1551"
+       "2638"
       ]
      },
      "execution_count": 26,
@@ -463,11 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "t1 = 'AF-ID(60031031) and AUTHLAST('\n",
@@ -484,11 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -654,7 +577,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "#例子\n",
@@ -851,7 +779,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "input_files = list(pathlib.Path('/Users/yansong/Nutstore Files/基金研究/data/2013--2022面青/scopus').glob('*.csv'))\n",
@@ -884,7 +817,12 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -956,7 +894,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -26687,7 +26627,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -39540,7 +39482,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
